@@ -601,6 +601,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   shared repository and only users with the 'reupload-shared' permission can
   complete the move.
 * (bug 18909) Add missing Postgres INSERT SELECT wrapper
+* User::isValidPassword now only returns boolean results, User::getPasswordValidity
+  can be used to get an error message string
+* The error message shown in Special:ChangePassword now parses wiki markup
 
 == API changes in 1.16 ==
 
